--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Icon must end with two \r
 Icon
 
+# jupyter stuff
+.ipynb_checkpoints/ 
+__pycache__
+
 # Thumbnails
 ._*
 
@@ -23,4 +27,4 @@ Icon
 .AppleDesktop
 Network Trash Folder
 Temporary Items
-.apdisk
+.apdisk                                 
